@@ -1007,7 +1007,8 @@ cl_symbols[] = {
 {"SI::POINTER", SI_ORDINARY, si_pointer, 1},
 {"SI::PRETTY-PRINT-FORMAT", SI_ORDINARY, NULL, -1},
 {"SI::PROCESS-DECLARATIONS", SI_ORDINARY, si_process_declarations, -1},
-{"SI::PROCESS-LAMBDA-LIST", SI_ORDINARY, si_process_lambda_list, 1},
+{"SI::PROCESS-LAMBDA", SI_ORDINARY, si_process_lambda, 1},
+{"SI::PROCESS-LAMBDA-LIST", SI_ORDINARY, si_process_lambda_list, 2},
 {"SI::PUT-F", SI_ORDINARY, si_put_f, 3},
 {"SI::PUT-PROPERTIES", SI_ORDINARY, si_put_properties, -1},
 {"SI::PUTPROP", SI_ORDINARY, si_putprop, 3},
