@@ -1068,6 +1068,10 @@ ECL 0.8
     read_object_with_delimiter(), which reads up to a certain
     delimiting char is used instead.
 
+  - Two separate functions SI::PROCESS-LAMBDA & SI::PROCESS-LAMBDA-LIST to
+    parse functions and general lambda lists. The code has been improved and
+    it is now smaller.
+
 * Visible changes:
 
   - The C counterparts of the Lisp functions have now the prefix
